# loto

./: .dockerignore  .env.example  .gitignore  Dockerfile  STRESS_TEST_GUIDE.md  TASK_PLAN.md  add_firewall_rule.ps1  agent_setup.txt  assign_borlettes_to_partners.py  check_borlette.py  check_borlettes.py  check_data.py  check_user.py  clean_users.py  create_agent.py  create_agent_management.py  create_partners.py  create_partners_prod.py  create_superuser_prod.py  create_test_agent.py  create_test_partner.py  create_test_subscription.py  debug_data.py  debug_signup.py  diagnostic_borlettes.py  docker-compose.yml  fix_firewall.ps1  list_admins.py  list_borlettes.py  manage.py  migrate_and_superuser.sh  package-lock.json  package.json  pytest.ini  renew_all_admins.py  requirements.txt  reset_db_prod.py  signup_test_debug.py  smoke_test.sh  tailwind.config.cjs  (+3 more)
accounts/: admin.py  affiliate_urls.py  affiliate_views.py  api_urls.py  api_views.py  audit.py  default_tirages.py  financial_distribution.py  forms.py  mail_service.py  middleware.py  models.py  partner_urls.py  partner_views.py  partner_views_new.py  password_reset_api.py  payment_services.py  pricing_api.py  pricing_config.py  pricing_utils.py  signals.py  signup_api.py  tests.py  views.py  withdrawals.py
admin_portal/: affiliate_admin.py  agent_api.py  agent_forms.py  context_processors.py  dashboard_api.py  dashboard_service.py  expense_forms.py  (+15 more)
services/validator_rust/: .gitignore  Cargo.toml  Dockerfile  build.rs
services/validator_rust/proto/: validator.proto
services/validator_rust/src/: main.rs
(+284 files in other folders)
